--- a/E-Phone.API/appsettings.json
+++ b/E-Phone.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "sqlConnectionString": "Server=DESKTOP-AUVUDLH; Database=EPhone; Uid=sa; Pwd=123;"
+  },
+  "JwtSettings": {
+    "SecurityKey": "c50-33664,8b66.4a32/c5033664,8b+66.4a32",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
   }
 }
