--- a/E-Phone.BLL/E-Phone.BLL.csproj
+++ b/E-Phone.BLL/E-Phone.BLL.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.26" />
   </ItemGroup>
 
   <ItemGroup>
